
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
     2: AstroFloyd, 16/01/2009
       Cleaning of files for compilation with -warn all and -check all:
       - stick things into arrays before calling pgline/pgpoly
       - remove unused variables
     
     1: AstroFloyd, 16/01/2009
     Initial import of eggleton tools
     